@@ -1,3 +1,7 @@
+2006-07-06 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/hc08/gen.c (genAddrOf): fixed bug when offset on stack is >127
+
 2006-07-06 Borut Razem <borut.razem AT siol.net>
 
 	* support/regression/tests/bitfields.c:
